--- a/KeKeVideoPlayer/KeKeVideoPlayer/Products/Japanese/Japanese_Info.plist
+++ b/KeKeVideoPlayer/KeKeVideoPlayer/Products/Japanese/Japanese_Info.plist
@@ -112,5 +112,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
