音乐播放器完成

--- a/KeKeVideoPlayer/KeKeVideoPlayer/Products/Default.bundle/theme.plist
+++ b/KeKeVideoPlayer/KeKeVideoPlayer/Products/Default.bundle/theme.plist
@@ -282,6 +282,8 @@
 	<string>Music/Music_placeholder.png</string>
 	<key>Music_download</key>
 	<string>Music/Music_download.png</string>
+	<key>Music_btn_search</key>
+	<string>Music/Music_btn_search.png</string>
 	<key>★★★★★----------End-----------★★★★★</key>
 	<string>★★★★★----------End-----------★★★★★</string>
 </dict>
