音乐播放器优化

--- a/KeKeVideoPlayer/KeKeVideoPlayer/Products/Default.bundle/theme.plist
+++ b/KeKeVideoPlayer/KeKeVideoPlayer/Products/Default.bundle/theme.plist
@@ -284,6 +284,10 @@
 	<string>Music/Music_download.png</string>
 	<key>Music_btn_search</key>
 	<string>Music/Music_btn_search.png</string>
+	<key>Music_btn_pop_cha</key>
+	<string>Music/Music_btn_pop_cha.png</string>
+	<key>Music_btn_arrow_down</key>
+	<string>Music/Music_btn_arrow_down.png</string>
 	<key>★★★★★----------End-----------★★★★★</key>
 	<string>★★★★★----------End-----------★★★★★</string>
 </dict>
