--- a/KeKeVideoPlayer/KeKeVideoPlayer/Products/Music/Music_Info.plist
+++ b/KeKeVideoPlayer/KeKeVideoPlayer/Products/Music/Music_Info.plist
@@ -48,7 +48,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>mqqOpensdkSSoLogin</string>
