--- a/KeKeVideoPlayer/KeKeVideoPlayer/Products/Demo/Demo_Info.plist
+++ b/KeKeVideoPlayer/KeKeVideoPlayer/Products/Demo/Demo_Info.plist
@@ -89,7 +89,9 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>《DEMO》想要访问您的手机系统相册，以便使用聊天里面的发送照片等功能。</string>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIPrerenderedIcon</key>
@@ -113,9 +115,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 </dict>
 </plist>
