--- a/KeKeVideoPlayer/KeKeVideoPlayer/Products/Music/Music_Info.plist
+++ b/KeKeVideoPlayer/KeKeVideoPlayer/Products/Music/Music_Info.plist
@@ -119,6 +119,8 @@
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 </dict>
