--- a/KeKeVideoPlayer/KeKeVideoPlayer/Products/Demo/Demo_Info.plist
+++ b/KeKeVideoPlayer/KeKeVideoPlayer/Products/Demo/Demo_Info.plist
@@ -91,7 +91,11 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
+		<string>processing</string>
+		<string>fetch</string>
 	</array>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIPrerenderedIcon</key>
